crates/rome_formatter/tests/specs/prettier/js/comments/return-statement.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: return-statement.js

---
# Input
```js
function jsx() {
  return (
    // Comment
    <div />
  );
}

function unary() {
  return (
    // Comment
    !!x
  );
}

function numericLiteralNoParen() {
  return 1337; // Comment
}

function logical() {
  return (
    // Reason for 42
    42
  ) && 84
}

function binary() {
  return (
    // Reason for 42
    42
  ) * 84
}

function binaryInBinaryLeft() {
  return (
    // Reason for 42
    42
  ) * 84 + 2
}

function binaryInBinaryRight() {
  return (
    // Reason for 42
    42
  ) + 84 * 2
}

function conditional() {
  return (
    // Reason for 42
    42
  ) ? 1 : 2
}

function binaryInConditional() {
  return (
    // Reason for 42
    42
  ) * 3 ? 1 : 2
}

function call() {
  return (
    // Reason for a
    a
  )()
}

function memberInside() {
  return (
    // Reason for a.b
    a.b
  ).c
}

function memberOutside() {
  return (
    // Reason for a
    a
  ).b.c
}

function memberInAndOutWithCalls() {
  return (
    // Reason for a
    aFunction.b()
  ).c.d()
}

function excessiveEverything() {
  return (
    // Reason for stuff
    a.b() * 3 + 4 ? (a`hi`, 1) ? 1 : 1 : 1
  )
}

// See https://github.com/prettier/prettier/issues/2392
// function sequenceExpression() {
//   return (
//     // Reason for a
//     a
//   ), b
// }

function sequenceExpressionInside() {
  return ( // Reason for a
    a, b
  );
}

function taggedTemplate() {
  return (
    // Reason for a
    a
  )`b`
}

function inlineComment() {
  return (
    /* hi */ 42
  ) || 42
}

```

# Output
```js
function jsx() {
  return (
    // Comment
    <div />
  );
}

function unary() {
  return (
    // Comment
    !!x
  );
}

function numericLiteralNoParen() {
  return 1337; // Comment
}

function logical() {
  return (
    // Reason for 42
    42
  ) && 84;
}

function binary() {
  return (
    // Reason for 42
    42
  ) * 84;
}

function binaryInBinaryLeft() {
  return (
    (
      // Reason for 42
      42
    ) * 84
  ) + 2;
}

function binaryInBinaryRight() {
  return (
    // Reason for 42
    42
  ) + (84 * 2);
}

function conditional() {
  return (
    // Reason for 42
    42
  ) ? 1 : 2;
}

function binaryInConditional() {
  return (
    // Reason for 42
    42
  ) * 3 ? 1 : 2;
}

function call() {
  return (
    // Reason for a
    a
  )();
}

function memberInside() {
  return (
    // Reason for a.b
    a.b
  ).c;
}

function memberOutside() {
  return (
    // Reason for a
    a
  ).b.c;
}

function memberInAndOutWithCalls() {
  return (
    // Reason for a
    aFunction.b()
  ).c.d();
}

function excessiveEverything() {
  return (
    // Reason for stuff
    (a.b() * 3) + 4
      ? (a`hi`, 1)
        ? 1
        : 1
      : 1
  );
}

// See https://github.com/prettier/prettier/issues/2392
// function sequenceExpression() {
//   return (
//     // Reason for a
//     a
//   ), b
// }

function sequenceExpressionInside() {
  return (
    // Reason for a
    a, b
  );
}

function taggedTemplate() {
  return (
    // Reason for a
    a
  )`b`;
}

function inlineComment() {
  return (
    /* hi */ 42
  ) || 42;
}

```

<<<<<<< HEAD
<<<<<<< HEAD
# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
  ┌─ return-statement.js:4:5
  │
4 │     <div />
  │     ^^^^^^^ JSX only syntax


```

=======
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)
=======
>>>>>>> 5f301e8a10 (formatter codegen supporting jsx)

